# StarWise

./: .env  AnalyticsDashboard.tsx  App.tsx  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v1.2.0.md  ShareModal.tsx  analyze-db.js  db-check.json  db-from-container.json  deploy-fresh.sh  docker-compose.prod.yml  docker-compose.yml  dockerfile  fix-database.js  index.html  index.js  index.tsx  metadata.json  mui-icons.d.ts  package-lock.json  package.json  reproduce_mutation.js  run-migrations-entry.js  tsconfig.json  types.ts  update-backend-script.cjs  vite.config.ts  w.env.example
backend/: .env  Dockerfile  README.md  analyze_db.js  index.js  migrations.js  package-lock.json  package.json  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  repos.py
backend/app/core/: config.py
backend/app/db/: crud.py  models.py  session.py
backend/app/services/: gemini.py  github.py  security.py
components/: Dashboard.tsx  Header.tsx  LoginScreen.tsx  RepoCard.tsx  ThemeToggle.tsx
components/icons/: Icons.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/: .env  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
hooks/: useTheme.tsx
public/: index.css
services/: geminiService.ts  githubService.ts
starwise-extension/: AUTO-IMPORT-FIX.js  README.md  TESTING.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
(+17 files in other folders)
